syntax = "proto3";

option go_package = "./pb";

import "chat.proto";
package msg_gateway;

message OnlinePushMsgReq {
  pbChat.MsgData msgData = 2;
  string pushToUserID = 3;
}

message OnlinePushMsgResp{
  bool Success = 1;
  string ErrMsg = 2;
}

message GetUsersOnlineStatusReq{
  repeated string  userIDList = 1;
}

message GetUsersOnlineStatusResp{
  message UserStatus {
    string userID = 1;
    map<string, string> platformAddrMap = 2;
  }
  repeated UserStatus statusList = 1;
}

message KickUserConnsReq{
  string userID = 1;
  repeated string platformIDs = 2;
}
message KickUserConnsToMQ{
  string userID = 1;
  repeated string platformIDs = 2;
  string traceID = 3;
}
message KickUserConnsResp{
  int32  errCode = 1;
  string errMsg = 2;
}
service OnlineMessageRelayService {
  rpc OnlinePushMsg(OnlinePushMsgReq) returns(OnlinePushMsgResp);
  rpc GetUsersOnlineStatus(GetUsersOnlineStatusReq)returns(GetUsersOnlineStatusResp);
  rpc KickUserConns(KickUserConnsReq) returns(KickUserConnsResp);
}

